force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Active__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>