force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__ArchiveContentDocumentChildren__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__ArchiveContentDocumentChildren__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archive ContentDocument Children</label>
    <type>Checkbox</type>
</CustomField>