force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Core_SQL__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Core_SQL__c</fullName>
    <label>Core SQL</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>