force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Enable_Core_SQL__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Enable_Core_SQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Core SQL</label>
    <type>Checkbox</type>
</CustomField>