force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Frequency__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>