force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Impossible_Query__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Impossible_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impposible Query</label>
    <type>Checkbox</type>
</CustomField>