force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Limit__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Limit__c</fullName>
    <label>Limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>10,000</fullName>
            </value>
            <value>
                <fullName>100,000</fullName>
            </value>
            <value>
                <fullName>1,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>