force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Mark_for_delete__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Mark_for_delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark for delete</label>
    <type>Checkbox</type>
</CustomField>