force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__policy_type__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__policy_type__c</fullName>
    <label>policy type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manually</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>