force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__RelationLookup__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__RelationLookup__c</fullName>
    <label>RelationLookup</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>