force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Retention_Year__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Retention_Year__c</fullName>
    <label>Retention Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>