force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/fields/OB_Archiver__Soft_deleted__c.field-meta.xml
<CustomField>
    <fullName>OB_Archiver__Soft_deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field set to true, mark policies as deleted. other deletion of policies is prevented.</description>
    <label>Soft deleted</label>
    <type>Checkbox</type>
</CustomField>