force-app/main/default/objects/OB_Archiver__ArchivingPolicy__c/recordTypes/OB_Archiver__Purge_Policy.recordType-meta.xml
<RecordType>
    <fullName>OB_Archiver__Purge_Policy</fullName>
    <active>true</active>
    <label>Purge Policy</label>
</RecordType>